# cybersec-agent

./: .easignore  .gitignore  .pre-commit-config.yaml  CLAUDE.md  README.md  renovate.json
.github/workflows/: build-apk.yml
app/: .easignore  .prettierignore  .prettierrc.json  CLAUDE.md  app.json  eas.json  eslint.config.js  google-services.json  package.json
app/app/: _layout.tsx  agent-guide.tsx  hotspots.tsx  link-checker.tsx  login.tsx  onboarding.tsx  signup.tsx
app/app/(tabs)/: _layout.tsx  alerts.tsx  chat.tsx  index.tsx  protection.tsx
app/components/: parallax-scroll-view.tsx
app/components/onboarding/: onboarding-art.tsx
app/components/signup/: contact-step.tsx
app/components/ui/: back-header.tsx  button.tsx  call-list.tsx  card.tsx  chip-select.tsx  feature-block.tsx  feature-row.tsx  fraud-map.tsx  gradient-panel.tsx  icon-badge.tsx  markdown-text.tsx  screen.tsx  section-header.tsx  stat-tiles.tsx  text-field.tsx  top-bar.tsx
app/constants/: app.ts  config.ts  design.ts  flags.ts
app/lib/: alert-store.ts  api.ts  auth.ts  notifications.ts
backend/: .dockerignore  .env.example  CLAUDE.md  docker-compose.yml  pyproject.toml  train_url_classifier.py
backend/data/: url_classifier.joblib
backend/docs/: fraud-intelligence-overview.md  notifications-handoff.md
backend/server/: Dockerfile  app.py  deps.py
backend/server/chatbot/: engine.py  link_safety.py  llm.py  retrieval.py  tools.py
backend/server/chatbot/knowledge_base/: cybercrime_types_glossary.md  digital_arrest_basics.md  identity_theft_and_common_scams.md  scam_playbooks_and_reporting.md
backend/server/core/: security.py
backend/server/graph/: __main__.py  analyze.py  build.py  deployment.py  geospatial.py  jurisdiction.py  ncrb_baseline.py  neo4j_client.py  neo4j_load.py  pipeline.py  scheduler.py
backend/server/graph/data/: geocode_cache.json  ncrb_cybercrime_city.json
backend/server/models/: chat.py  incident.py  user.py
backend/server/repositories/: chat_repo.py  incident_repo.py  intelligence_repo.py  user_repo.py
backend/server/routers/: alerts.py  auth.py  calls.py  chatbot.py  intelligence.py  link_check.py  notifications.py  test.py
backend/server/services/: auth_service.py  chatbot_service.py  notification_service.py
backend/shared/: config.py  db.py  detector.py
backend/shared/models/: call.py
backend/shared/repositories/: call_repo.py
backend/shared/stt/: __init__.py  base.py  factory.py  sarvam.py
backend/test/: article.html  test_article_extraction.ipynb
backend/worker/: Dockerfile  agent.py  audio_out.py  call_monitor.py
rag-graph/: CLAUDE.md
rag-graph/src/graph/: _check.py
rag-graph/src/rag/: incident.py
