[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi[standard]>=0.138.0",
    "groq>=1.5.0",
    "httpx>=0.28.1",
    "livekit-agents>=1.6.3",
    "livekit-api>=1.1.0",
    "pydantic-settings>=2.14.2",
    "pyjwt>=2.13.0",
    "pymongo>=4.17.0",
    "python-dotenv>=1.2.2",
    "sarvamai>=0.1.28",
    "websockets>=16.0",
]

[dependency-groups]
dev = [
    "pre-commit>=4.6.0",
    "ruff>=0.15.19",
]
