[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "beautifulsoup4>=4.15.0",
    "faiss-cpu>=1.14.3",
    "fastapi[standard]>=0.138.0",
    "geopy>=2.4",
    "groq<1",
    "httpx>=0.28.1",
    "langchain-community>=0.4.2",
    "langchain-groq>=1.1.3",
    "langchain-huggingface>=1.2.2",
    "langchain-openai>=1.3.3",
    "livekit-agents>=1.6.3",
    "livekit-api>=1.1.0",
    "neo4j>=6.2.0",
    "networkx>=3.6.1",
    "pydantic-settings>=2.14.2",
    "pyjwt>=2.13.0",
    "pymongo>=4.17.0",
    "python-dotenv>=1.2.2",
    "sarvamai>=0.1.28",
    "sentence-transformers>=5.6.0",
    "sse-starlette>=3.4.5",
    "websockets>=16.0",
]

[dependency-groups]
dev = [
    "ipykernel>=7.3.0",
    "pre-commit>=4.6.0",
    "ruff>=0.15.19",
]
